<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_vertical"
    tools:context=".MainActivity">

    <ToggleButton
        android:id="@+id/toggleCrowdButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/toggle_button_border"
        android:text="@string/togglecrowd"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textOff="@string/togglecrowdbuttontext"
        android:textOn="@string/togglecrowdbuttontext"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.872" />

    <Button
        android:id="@+id/soundboard_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/jumbotron_button_border"
        android:text="@string/soundboardbuttontext"
        android:textColor="#FFA000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/schedule_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:background="@drawable/jumbotron_button_border"
        android:text="@string/schedulebuttontext"
        android:textColor="#FFA000"
        app:layout_constraintBottom_toTopOf="@+id/standings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/scores_button"
        app:layout_constraintTop_toBottomOf="@+id/soundboard_button"
        app:layout_constraintVertical_bias="0.444" />

    <Button
        android:id="@+id/standings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/jumbotron_button_border"
        android:text="@string/standingsbuttontext"
        android:textColor="#FFA000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/schedule_button"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/scores_button"
        app:layout_constraintTop_toBottomOf="@+id/soundboard_button"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:background="@drawable/jumbotron_button_border"
        android:text="@string/scoresbuttontext"
        android:textColor="#FFA000"
        app:layout_constraintBottom_toTopOf="@+id/standings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundboard_button"
        app:layout_constraintVertical_bias="0.444" />

</androidx.constraintlayout.widget.ConstraintLayout>